--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,4 +25,4 @@ jobs:
       uses: alex-page/blazing-fast-gh-pages-deploy@v1.1.0
       with:
         site-directory: public
-        repo-token: ${{ secrets.GH_PAT }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
